dist/1.0/bin/sample/retrieveUnpackaged/objects/Generic_Product_Relation__c.object
<CustomObject>
    <description>Stores relation between Generic Products</description>
    <fields>
        <fullName>Bundle__c</fullName>
        <label>Bundle</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Generic Product Relations</relationshipLabel>
        <relationshipName>Generic_Product_Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBundle__c</fullName>
        <label>Bundle</label>
        <referenceTo>CProduct__c</referenceTo>
        <relationshipLabel>Generic Product Relations</relationshipLabel>
        <relationshipName>Generic_Product_Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_in_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created in Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Generic_Produc1_Label_Hungarian__c</fullName>
        <formula>Generic_Product1_ID__r.Label_HUN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Generic Produc1 Label (Hungarian)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generic_Produc1_Label_Polish__c</fullName>
        <formula>Generic_Product1_ID__r.Label_POL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Generic Produc1 Label (Polish)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generic_Produc1_Label_Slovak__c</fullName>
        <description>Generic Product1 Label (Slovak)</description>
        <formula>Generic_Product1_ID__r.Label_SVK__c</formula>
        <inlineHelpText>Generic Product1 Label (Slovak)</inlineHelpText>
        <label>Generic Produc1 Label (Slovak)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generic_Product1_ID__c</fullName>
        <description>GenericProduct 1 Record Id for which relationship is created</description>
        <inlineHelpText>GenericProduct 1 Record Id for which relationship is created</inlineHelpText>
        <label>Generic Product1</label>
        <referenceTo>Generic_Product__c</referenceTo>
        <relationshipLabel>Generic Product Relations (GenericProduct1)</relationshipLabel>
        <relationshipName>GenericProductRelations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Generic_Product1_Label_English__c</fullName>
        <description>Generic Product1 Label (English)</description>
        <formula>Generic_Product1_ID__r.Label_Eng__c</formula>
        <inlineHelpText>Generic Product1 Label (English)</inlineHelpText>
        <label>Generic Product1 Label (English)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generic_Product2_ID__c</fullName>
        <description>GenericProduct 2  Record Id for which relationship is created</description>
        <inlineHelpText>GenericProduct 2  Record Id for which relationship is created</inlineHelpText>
        <label>Generic Product2</label>
        <referenceTo>Generic_Product__c</referenceTo>
        <relationshipLabel>Generic Product Relations (Generic Product2)</relationshipLabel>
        <relationshipName>GenericProductRelations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Generic_Product2_Label_English__c</fullName>
        <description>Generic Product2 Label (English)</description>
        <formula>Generic_Product2_ID__r.Label_Eng__c</formula>
        <inlineHelpText>Generic Product2 Label (English)</inlineHelpText>
        <label>Generic Product2 Label (English)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generic_Product2_Label_Hungarian__c</fullName>
        <formula>Generic_Product2_ID__r.Label_HUN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Generic Product2 Label (Hungarian)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generic_Product2_Label_Polish__c</fullName>
        <formula>Generic_Product2_ID__r.Label_POL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Generic Product2 Label (Polish)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generic_Product2_Label_Slovak__c</fullName>
        <description>Generic Product2 Label (Slovak)</description>
        <formula>Generic_Product2_ID__r.Label_SVK__c</formula>
        <inlineHelpText>Generic Product2 Label (Slovak)</inlineHelpText>
        <label>Generic Product2 Label (Slovak)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Child__c</fullName>
        <description>Describes the number of GenericProduct children that can be selected during order configuration
(Null value will disable this restriction )</description>
        <inlineHelpText>Describes the number of GenericProduct children that can be selected during order configuration
(Null value will disable this restriction )</inlineHelpText>
        <label>Max Child</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Copy_No__c</fullName>
        <description>Describes the maximum number of copies of GenericProduct 2 on GenericProduct 1 (Null value will specifiy the GenericProduct 2 which can not be cloned on the GenericProduct 1)</description>
        <inlineHelpText>Describes the maximum number of copies of GenericProduct 2 on GenericProduct 1 (Null value will specifiy the GenericProduct 2 which can not be cloned on the GenericProduct 1)</inlineHelpText>
        <label>Max Copies No</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Relation_Type__c</fullName>
        <description>Provides information about Relation Type between GenericProduct 1 and GenericProduct 2 - see available picklist values for more details</description>
        <inlineHelpText>Provides information about Relation Type between GenericProduct 1 and GenericProduct 2 - see available picklist values for more details</inlineHelpText>
        <label>Relation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Exclusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offer Hierarchy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requirement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Relationship_Name__c</fullName>
        <label>Relationship Name</label>
        <picklist>
            <picklistValues>
                <fullName>customer&apos;s facing service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>resource facing service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <description>Defines order in which this item will be displayed in Product Configurator.</description>
        <inlineHelpText>Defines order in which this item will be displayed in Product Configurator.</inlineHelpText>
        <label>Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source_Record_Id__c</fullName>
        <description>Unique Relationship identifier which can be used for data synchronization between diferent systems</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique Relationship identifier which can be used for data synchronization between diferent systems</inlineHelpText>
        <label>Source Record Id</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Synchronized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Synchronized</label>
        <type>Checkbox</type>
    </fields>
    <label>Generic Product Relation</label>
    <nameField>
        <label>Generic Product Relation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Generic Product Relations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>